Only update the select command for focused text inputs.  Bug 394792, r=roc, sr=neil, a=roc